Add the remove route
